update ambit description

--- a/tours/ambit/project_1/index.html
+++ b/tours/ambit/project_1/index.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ambit Virtual Tour</title>
+  <title>Ambit - Primoris</title>
+  <meta name="description" content="Explore your home at Ambit Primoris Kandivali (W) from any device">
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: Calibri, sans-serif;
       display: flex;
       justify-content: center;
       align-items: center;
