fix p-tag font & testimonial logos

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     <h5 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Unlock the World – Virtually</h5>
                     <h1 class="display-4 mb-3">One stop solution to create <span class="text-primary">Immersive Virtual Tour</span> for your Product</h1>
                     <p>At Tech-Triq, we transform spaces into immersive experiences through cutting-edge virtual tour technology. We don't just create tours; we craft engaging, interactive journeys that allow your audience to explore properties, venues, and destinations like never before.</p>
-                    <h5 class="text-uppercase text-primary mb-3">What we do: </h5>
+                    <h5 class="text-uppercase text-primary mb-3">Why work with us?</h5>
                     <ul>
                         <li>
                             <span class="text-primary">High-Resolution 360° Virtual Tours: </span>Capture every detail with state-of-the-art equipment and expert photography
@@ -122,7 +122,7 @@
                         </li>
                     </ul>
                     <p>Our VR Services are able to convey complex business processes using a modular production process, intuitive interface design, and imaginative feature combinations — all tailored to enhance your marketing efforts across all digital platforms.</p>
-                    <a class="btn btn-primary font-weight-bold py-3 px-5 mt-2" type="button" data-toggle="modal" data-target="#service">See our Services</a>
+                    <a class="btn btn-primary font-weight-bold btn-scroll py-3 px-5 mt-2" type="button" href="#service">See our Services</a>
                 </div>
             </div>
         </div>
@@ -259,14 +259,14 @@
                 <div class="col-lg-8">
                     <div class="owl-carousel testimonial-carousel">
                         <div class="text-center">
-                            <img class="img-fluid mx-auto mb-3" src="../img/testimonial-1.jpg" style="width: 100px;">
-                            <p style="font-size: 22px;">Dolor eirmod diam stet kasd sed. Aliqu rebum est eos. Rebum elitr dolore et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod eos labore diam</p>
+                            <img class="img-fluid mx-auto mb-3" src="../img/logo-search-grid-1x.png" style="width: 200px;">
+                            <p style="font-size: 22px;">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
                             <h4>Client Name</h4>
                             <span>Company Name</span>
                         </div>
                         <div class="text-center">
-                            <img class="img-fluid mx-auto mb-3" src="../img/testimonial-2.jpg" style="width: 100px;">
-                            <p style="font-size: 22px;">Dolor eirmod diam stet kasd sed. Aliqu rebum est eos. Rebum elitr dolore et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod eos labore diam</p>
+                            <img class="img-fluid mx-auto mb-3" src="../img/logo-search-grid-2x.png" style="width: 200px;">
+                            <p style="font-size: 22px;">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
                             <h4>Client Name</h4>
                             <span>Company Name</span>
                         </div>
