update till 9th may

--- a/3d-cad-services/index.html
+++ b/3d-cad-services/index.html
@@ -30,14 +30,14 @@
     <!-- Navbar Start -->
     <nav class="navbar fixed-top shadow-sm navbar-expand-lg bg-dark navbar-dark py-1 py-lg-0">
         <a href="/" class="navbar-brand d-block d-lg-none">
-            <h1 class="display-4 text-white m-0">Tech Triq</h1>
+            <img class="navbar-img" src="../img/Tech_Trique_logo.png">
         </a>
         <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-            <a href="/" class="navbar-brand px-4 mx-0 d-none d-lg-block">
-                <h1 class="display-4 text-white m-0">Tech Triq</h1>
+            <a href="/" class="navbar-brand mx-0 d-none d-lg-block">
+                <img class="navbar-img" src="../img/Tech_Trique_logo.png">
             </a>
             <div class="navbar-nav ml-auto py-0">
                 <a href="/" class="nav-item nav-link active">Home</a>
@@ -59,7 +59,7 @@
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 1200px;">
                             <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">3D Services<h4>
-                            <h3 class="display-3 font-secondary text-white mb-4">Your Tag Line</h3>
+                            <h3 class="display-3 font-secondary text-white mb-4">Experience Your Vision<br>From Design to Reality</h3>
                             <a class="btn btn-light font-weight-bold py-3 px-5 mt-2 btn-scroll" href="#contact">Get A Quote</a>
                         </div>
                     </div>
@@ -80,8 +80,8 @@
                     </video>
                 </div>
                 <div class="col-lg-5">
-                    <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">3D Services</h6>
-                    <h1 class="display-4 mb-3">Give your Buyers an <span class="text-primary">Unforgettable First Impression</span></h1>
+                    <h5 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Interior Design Rendering</h5>
+                    <h1 class="display-4 mb-3">Transforming <span class="text-primary">Spaces</span> Elevating <span class="text-primary">Lives</span> </h1>
                     <p>At sed est eirmod sanctus et amet diam magna. Dolore clita magna sed sed stet et, at magna rebum eirmod sanctus ut sed, stet tempor dolore rebum sit duo, dolore tempor sit est sit sanctus, sit justo sit invidunt clita ut justo diam magna. Erat eos nonumy labore dolor. Dolore kasd no et et et elitr. Erat sea dolor elitr diam sed lorem rebum et vero. </p>
                 </div>
             </div>
@@ -92,8 +92,42 @@
         <div class="container py-5">
             <div class="row align-items-center">
                 <div class="col-lg-5">
-                    <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Interactive 360 Virtual Tour</h6>
-                    <h1 class="display-4 mb-3">Easy to <span class="text-primary">Share</span></h1>
+                    <h5 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Exterior Design Rendering</h5>
+                    <h1 class="display-4 mb-3">Designing the <span class="text-primary">Dream</span><br>From the <span class="text-primary">Outside In</span></h1>
+                    <p>At sed est eirmod sanctus et amet diam magna. Dolore clita magna sed sed stet et, at magna rebum eirmod sanctus ut sed, stet tempor dolore rebum sit duo, dolore tempor sit est sit sanctus, sit justo sit invidunt clita ut justo diam magna. Erat eos nonumy labore dolor. Dolore kasd no et et et elitr. Erat sea dolor elitr diam sed lorem rebum et vero. </p>
+                </div>
+                <div class="col-lg-7">
+                    <video class="content-video w-100 h-100" autoplay loop muted>
+                        <source src="../video/signia_2.mp4" type="video/mp4">
+                    </video>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid py-5" id="about">
+        <div class="container py-5">
+            <div class="row align-items-center">
+                <div class="col-lg-7">
+                    <video class="content-video w-100 h-100" autoplay loop muted>
+                        <source src="../video/signia_2.mp4" type="video/mp4">
+                    </video>
+                </div>
+                <div class="col-lg-5">
+                    <h5 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Walkthrough Video</h5>
+                    <h1 class="display-4 mb-3">See your <span class="text-primary">Vision</span><br>In <span class="text-primary">Motion</span> </h1>
+                    <p>At sed est eirmod sanctus et amet diam magna. Dolore clita magna sed sed stet et, at magna rebum eirmod sanctus ut sed, stet tempor dolore rebum sit duo, dolore tempor sit est sit sanctus, sit justo sit invidunt clita ut justo diam magna. Erat eos nonumy labore dolor. Dolore kasd no et et et elitr. Erat sea dolor elitr diam sed lorem rebum et vero. </p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid py-5" id="about">
+        <div class="container py-5">
+            <div class="row align-items-center">
+                <div class="col-lg-5">
+                    <h5 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Location A/V</h5>
+                    <h1 class="display-4 mb-3">Highlight the <span class="text-primary">Unique</span> Selling Points of your <span class="text-primary">Project</span> </h1>
                     <p>At sed est eirmod sanctus et amet diam magna. Dolore clita magna sed sed stet et, at magna rebum eirmod sanctus ut sed, stet tempor dolore rebum sit duo, dolore tempor sit est sit sanctus, sit justo sit invidunt clita ut justo diam magna. Erat eos nonumy labore dolor. Dolore kasd no et et et elitr. Erat sea dolor elitr diam sed lorem rebum et vero. </p>
                 </div>
                 <div class="col-lg-7">
@@ -105,124 +139,6 @@
         </div>
     </div>
     <!-- About End -->
-
-
-    <!-- Service Start -->
-    <div class="container-fluid py-5" id="service">
-        <div class="container py-5">
-            <div class="section-title position-relative text-center">
-                <h5 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Services</h5>
-                <h1 class="font-secondary display-4">What we in 3D</h1>
-            </div>
-            <div class="row">
-                <div class="col-lg-3 mb-3">
-                    <div class="product-item mb-2">
-                        <div class="project-item">
-                            <img class="img-fluid" src="../img/product-3.jpg" alt="">
-                            <a class="btn btn-project-features">
-                                <p>Our most popular feature to interact & display information interactively inside your Virtual Tour</p>
-                            </a>
-                        </div>
-                        <div class="bg-secondary text-center p-4">
-                            <h3 class="m-0">Hotspots</h3>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 mb-3">
-                    <div class="product-item mb-2">
-                        <div class="project-item">
-                            <img class="img-fluid" src="../img/product-3.jpg" alt="">
-                            <a class="btn btn-project-features">
-                                <p>Integrate corporate ID design attributes into your VT’s blueprint, features, and presentation</p>
-                            </a>
-                        </div>
-                        <div class="bg-secondary text-center p-4">
-                            <h3 class="m-0">Styled Theme</h3>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 mb-3">
-                    <div class="product-item mb-2">
-                        <div class="project-item">
-                            <img class="img-fluid" src="../img/product-3.jpg" alt="">
-                            <a class="btn btn-project-features">
-                                <p>From your provided artwork, we can add navigation elements to a campus map. This is used inside the tour window to seamlessly flow from one 360 image to another.</p>
-                            </a>
-                        </div>
-                        <div class="bg-secondary text-center p-4">
-                            <h3 class="m-0">Interactive Floor Plan</h3>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 mb-3">
-                    <div class="product-item mb-2">
-                        <div class="project-item">
-                            <img class="img-fluid" src="../img/product-3.jpg" alt="">
-                            <a class="btn btn-project-features">
-                                <p>Built-in detailed online reporting of what your viewers are seeing within the tour. This includes all scene view, hotspot interactions using our advanced platform.</p>
-                            </a>
-                        </div>
-                        <div class="bg-secondary text-center p-4">
-                            <h3 class="m-0">Detailed Analytics</h3>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 mb-3">
-                    <div class="product-item mb-2">
-                        <div class="project-item">
-                            <img class="img-fluid" src="../img/product-3.jpg" alt="">
-                            <a class="btn btn-project-features">
-                                <p>Guide your prospects & enable direct interaction with your company info & contact details.</p>
-                            </a>
-                        </div>
-                        <div class="bg-secondary text-center p-4">
-                            <h3 class="m-0">Information Buttons</h3>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 mb-3">
-                    <div class="product-item mb-2">
-                        <div class="project-item">
-                            <img class="img-fluid" src="../img/product-3.jpg" alt="">
-                            <a class="btn btn-project-features">
-                                <p>Encourage easy access to your company’s physical location with a clear & embedded map.</p>
-                            </a>
-                        </div>
-                        <div class="bg-secondary text-center p-4">
-                            <h3 class="m-0">Integration of Google Maps</h3>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 mb-3">
-                    <div class="product-item mb-2">
-                        <div class="project-item">
-                            <img class="img-fluid" src="../img/product-3.jpg" alt="">
-                            <a class="btn btn-project-features">
-                                <p>Seamlessly transition from one perspective to another with exceptional light & dark viewing.</p>
-                            </a>
-                        </div>
-                        <div class="bg-secondary text-center p-4">
-                            <h3 class="m-0">Day-To-Night Transition</h3>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 mb-3">
-                    <div class="product-item mb-2">
-                        <div class="project-item">
-                            <img class="img-fluid" src="../img/product-3.jpg" alt="">
-                            <a class="btn btn-project-features">
-                                <p>Interact with objects within the Virtual Tour & customize them to visualize future home in your preferred way</p>
-                            </a>
-                        </div>
-                        <div class="bg-secondary text-center p-4">
-                            <h3 class="m-0">Interactive Objects</h3>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Service End -->
 
     <!-- Team Start -->
     <div class="container-fluid py-5" id="team">
@@ -240,7 +156,7 @@
     <div class="container-fluid py-5" id="contact">
         <div class="container py-5">
             <div class="section-title position-relative text-center">
-                <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Contact</h6>
+                <h5 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Contact</h5>
                 <h1 class="font-secondary display-4">Get In Touch</h1>
             </div>
             <div class="row justify-content-center">
