--- a/virtual-tour/index.html
+++ b/virtual-tour/index.html
@@ -30,14 +30,14 @@
     <!-- Navbar Start -->
     <nav class="navbar fixed-top shadow-sm navbar-expand-lg bg-dark navbar-dark py-1 py-lg-0">
         <a href="/" class="navbar-brand d-block d-lg-none">
-            <h1 class="display-4 text-white m-0">Tech Triq</h1>
+            <img class="navbar-img" src="../img/Tech_Trique_logo.png">
         </a>
         <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-            <a href="/" class="navbar-brand px-4 mx-0 d-none d-lg-block">
-                <h1 class="display-4 text-white m-0">Tech Triq</h1>
+            <a href="/" class="navbar-brand mx-0 d-none d-lg-block">
+                <img class="navbar-img" src="../img/Tech_Trique_logo.png">
             </a>
             <div class="navbar-nav ml-auto py-0">
                 <a href="/" class="nav-item nav-link active">Home</a>
@@ -80,7 +80,7 @@
                     </video>
                 </div>
                 <div class="col-lg-5">
-                    <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Interactive 360 Virtual Tour</h6>
+                    <h5 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Interactive 360 Virtual Tour</h5>
                     <h1 class="display-4 mb-3">Give your Buyers an <span class="text-primary">Unforgettable First Impression</span></h1>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
                 </div>
@@ -92,7 +92,7 @@
         <div class="container py-5">
             <div class="row align-items-center">
                 <div class="col-lg-5">
-                    <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Interactive 360 Virtual Tour</h6>
+                    <h5 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Interactive 360 Virtual Tour</h5>
                     <h1 class="display-4 mb-3">Easy to <span class="text-primary">Share</span></h1>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
                 </div>
@@ -240,7 +240,7 @@
     <div class="container-fluid py-5" id="contact">
         <div class="container py-5">
             <div class="section-title position-relative text-center">
-                <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Contact</h6>
+                <h5 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Contact</h5>
                 <h1 class="font-secondary display-4">Get In Touch</h1>
             </div>
             <div class="row justify-content-center">
