--- a/webar-brochure/index.html
+++ b/webar-brochure/index.html
@@ -30,14 +30,14 @@
     <!-- Navbar Start -->
     <nav class="navbar fixed-top shadow-sm navbar-expand-lg bg-dark navbar-dark py-1 py-lg-0">
         <a href="/" class="navbar-brand d-block d-lg-none">
-            <h1 class="display-4 text-white m-0">Tech Triq</h1>
+            <img class="navbar-img" src="../img/Tech_Trique_logo.png">
         </a>
         <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-            <a href="/" class="navbar-brand px-4 mx-0 d-none d-lg-block">
-                <h1 class="display-4 text-white m-0">Tech Triq</h1>
+            <a href="/" class="navbar-brand mx-0 d-none d-lg-block">
+                <img class="navbar-img" src="../img/Tech_Trique_logo.png">
             </a>
             <div class="navbar-nav ml-auto py-0">
                 <a href="/" class="nav-item nav-link active">Home</a>
@@ -80,7 +80,7 @@
                     </video>
                 </div>
                 <div class="col-lg-5">
-                    <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">WebAR Brochure</h6>
+                    <h5 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">WebAR Brochure</h5>
                     <h1 class="display-4 mb-3">Bring Your Brochure to <span class="text-primary">Life</span></h1>
                     <p>At sed est eirmod sanctus et amet diam magna. Dolore clita magna sed sed stet et, at magna rebum eirmod sanctus ut sed, stet tempor dolore rebum sit duo, dolore tempor sit est sit sanctus, sit justo sit invidunt clita ut justo diam magna. Erat eos nonumy labore dolor. Dolore kasd no et et et elitr. Erat sea dolor elitr diam sed lorem rebum et vero. </p>
                 </div>
@@ -92,7 +92,7 @@
         <div class="container py-5">
             <div class="row align-items-center">
                 <div class="col-lg-5">
-                    <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Interactive 360 Virtual Tour</h6>
+                    <h5 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Interactive 360 Virtual Tour</h5>
                     <h1 class="display-4 mb-3">Easy to <span class="text-primary">Share</span></h1>
                     <p>At sed est eirmod sanctus et amet diam magna. Dolore clita magna sed sed stet et, at magna rebum eirmod sanctus ut sed, stet tempor dolore rebum sit duo, dolore tempor sit est sit sanctus, sit justo sit invidunt clita ut justo diam magna. Erat eos nonumy labore dolor. Dolore kasd no et et et elitr. Erat sea dolor elitr diam sed lorem rebum et vero. </p>
                 </div>
@@ -214,7 +214,7 @@
     <div class="container-fluid py-5" id="contact">
         <div class="container py-5">
             <div class="section-title position-relative text-center">
-                <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Contact</h6>
+                <h5 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Contact</h5>
                 <h1 class="font-secondary display-4">Get In Touch</h1>
             </div>
             <div class="row justify-content-center">
