--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
     <!-- Navbar Start -->
     <nav class="navbar fixed-top navbar-expand-lg bg-dark navbar-dark py-1 py-lg-0">
         <a href="/" class="navbar-brand d-block d-lg-none">
-            <h1 class="display-4 text-white m-0">Tech Triq</h1>
+            <img class="navbar-img" src="img/Tech_Trique_logo.png">
         </a>
         <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-            <a href="/" class="navbar-brand px-4 mx-0 d-none d-lg-block">
-                <h1 class="display-4 text-white m-0">Tech Triq</h1>
+            <a href="/" class="navbar-brand mx-0 d-none d-lg-block">
+                <img class="navbar-img" src="img/Tech_Trique_logo.png">
             </a>
             <div class="navbar-nav ml-auto py-0">
                 <a href="#home" class="nav-item nav-link active">Home</a>
@@ -58,16 +58,16 @@
                 <video class="position-absolute w-100 h-100" autoplay loop muted>
                     <source src="video/signia_2bhk.mp4" type="video/mp4">
                 </video>
+                <!-- <iframe id="projectFrame" class="position-absolute" src="" name="" width="100%" height="100%" frameborder="0" allow="fullscreen; accelerometer; gyroscope; magnetometer; vr; xr; xr-spatial-tracking; autoplay; camera; microphone" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true" oallowfullscreen="true" msallowfullscreen="true"></iframe> -->
                 <div class="carousel-item position-relative active" style="height: 100vh; min-height: 400px;">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-                        <div class="p-3" style="max-width: 900px;">
-                            <h3 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">Tech Triq</h3>
+                        <div class="p-2" style="max-width: 900px;">
                             <h3 class="display-3 font-secondary text-white mb-4">Your Property<br>Beautifully Marketed</h3>
                             <a class="btn btn-light font-weight-bold py-3 px-5 mt-2 btn-scroll" href="#contact">Get A Quote</a>
                       </div>
                     </div>
                 </div>
-                <div class="carousel-item position-relative" style="height: 100vh; min-height: 400px;">
+               <!--  <div class="carousel-item position-relative" style="height: 100vh; min-height: 400px;">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
                             <h3 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">Tech Triq</h3>
@@ -75,7 +75,7 @@
                             <a class="btn btn-light font-weight-bold py-3 px-5 mt-2 btn-scroll" href="#contact">Get A Quote</a>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
             </div>
         </div>
@@ -97,28 +97,29 @@
         <div class="container py-5">
             <div class="row align-items-center">
                 <div class="col-lg-5">
-                    <img class="img-fluid mb-4 mb-lg-0" src="img/about.jpg" alt="">
+                    <!-- <img class="img-fluid mb-4 mb-lg-0" src="img/about.jpg" alt=""> -->
+                    <iframe class="img-fluid fluid-frame mb-4 mb-lg-0" width="100%" height="100%" frameborder="0" src="/little-planet"></iframe>
                 </div>
                 <div class="col-lg-7">
                     <h5 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Unlock the World – Virtually</h5>
-                    <h1 class="display-4 mb-3">One stop solution to create <span class="text-primary">Immersive Virtual Tour</span> for your Product</h1>
+                    <h1 class="display-4 mb-3">One stop solution to create <span class="text-primary">Immersive Experiences</span> for your Product</h1>
                     <p>At Tech-Triq, we transform spaces into immersive experiences through cutting-edge virtual tour technology. We don't just create tours; we craft engaging, interactive journeys that allow your audience to explore properties, venues, and destinations like never before.</p>
-                    <h5 class="text-uppercase text-primary mb-3">Why work with us?</h5>
+                    <h3 class="text-uppercase text-primary mb-3">Why work with us?</h3>
                     <ul>
                         <li>
-                            <span class="text-primary">High-Resolution 360° Virtual Tours: </span>Capture every detail with state-of-the-art equipment and expert photography
+                            <span class="text-bullet">High-Resolution 360° Virtual Tours: </span>Capture every detail with state-of-the-art equipment and expert photography
                         </li>
                         <li>
-                            <span class="text-primary">Interactive Elements: </span>Enrich your Tour with Interactive Hotspots, Multimedia elements
+                            <span class="text-bullet">Interactive Elements: </span>Enrich your Tour with Interactive Hotspots, Multimedia elements
                         </li>
                         <li>
-                            <span class="text-primary">Custom Design & Branding: </span>Trailor each tour to perfectly to your Brand & Objective
+                            <span class="text-bullet">Custom Design & Branding: </span>Trailor each tour to perfectly to your Brand & Objective
                         </li>
                         <li>
-                            <span class="text-primary">Cross-Platform Compatibility: </span>Our tours are seamlessly accessible on desktops, tablets, and smartphones
+                            <span class="text-bullet">Cross-Platform Compatibility: </span>Our tours are seamlessly accessible on desktops, tablets, and smartphones
                         </li>
                         <li>
-                            <span class="text-primary">Detailed Analytics: </span>Know your customers and behaviour with our detailed analytics
+                            <span class="text-bullet">Detailed Analytics: </span>Know your customers and behaviour with our detailed analytics
                         </li>
                     </ul>
                     <p>Our VR Services are able to convey complex business processes using a modular production process, intuitive interface design, and imaginative feature combinations — all tailored to enhance your marketing efforts across all digital platforms.</p>
@@ -140,7 +141,7 @@
                 <div class="col-lg-3 mb-3">
                     <div class="product-item mb-2">
                         <div class="product-img">
-                            <img class="img-fluid" src="img/product-1.jpg" alt="">
+                            <img class="img-fluid" src="img/vr.png" alt="">
                             <a type="button" class="btn btn-primary" href="/virtual-tour">
                                 <i class="fa fa-2x fa-plus text-white"></i>
                             </a>
@@ -153,7 +154,7 @@
                 <div class="col-lg-3 mb-3">
                     <div class="product-item mb-2">
                         <div class="product-img">
-                            <img class="img-fluid" src="img/product-2.jpg" alt="">
+                            <img class="img-fluid" src="img/aerial.jpg" alt="">
                             <a type="button" class="btn btn-primary" href="/aerial-tour">
                                 <i class="fa fa-2x fa-plus text-white"></i>
                             </a>
@@ -166,7 +167,7 @@
                 <div class="col-lg-3 mb-3">
                     <div class="product-item mb-2">
                         <div class="product-img">
-                            <img class="img-fluid" src="img/product-3.jpg" alt="">
+                            <img class="img-fluid" src="img/webar.jpg" alt="">
                             <a type="button" class="btn btn-primary" href="/webar-brochure">
                                 <i class="fa fa-2x fa-plus text-white"></i>
                             </a>
@@ -179,7 +180,7 @@
                 <div class="col-lg-3 mb-3">
                     <div class="product-item mb-2">
                         <div class="product-img">
-                            <img class="img-fluid" src="img/product-3.jpg" alt="">
+                            <img class="img-fluid" src="img/3d_services.jpg" alt="">
                             <a type="button" class="btn btn-primary" href="/3d-cad-services">
                                 <i class="fa fa-2x fa-plus text-white"></i>
                             </a>
@@ -198,20 +199,20 @@
     <!-- Gallery Start -->
     <div class="container-fluid bg-gallery" id="project" style="padding: 120px 0; margin: 90px 0;">
         <div class="section-title position-relative text-center" style="margin-bottom: 120px;">
-            <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Our Recent Projects</h6>
+            <h5 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Our Recent Projects</h5>
             <h1 class="font-secondary display-4 text-white">Experience it yourself</h1>
         </div>
         <div class="owl-carousel gallery-carousel">
             <div class="project-item">
-                <img class="img-fluid w-100" src="img/gallery-1.jpg" alt="">
-                <a class="btn btn-project" href="img/gallery-1.jpg" data-toggle="modal" data-target="#projectModal" onclick="loadIframe(src='//storage.net-fs.com/hosting/8311954/0/', name='Ambit - Primoris')">
+                <img class="img-fluid w-100" src="img/ambit.png" alt="">
+                <a class="btn btn-project" href="img/ambit.png' data-toggle="modal" data-target="#projectModal" onclick="loadIframe(src='//storage.net-fs.com/hosting/8311954/0/', name='Ambit - Primoris')">
                     <!-- <i class="fa fa-2x fa-plus text-white"></i> -->
                     <p>AMBIT PRIMORIS</p>
                 </a>
             </div>
             <div class="project-item">
-                <img class="img-fluid w-100" src="img/gallery-2.jpg" alt="">
-                <a class="btn btn-project" href="img/gallery-2.jpg" data-toggle="modal" data-target="#projectModal" onclick="loadIframe(src='//storage.net-fs.com/hosting/8311954/1/', name='Rajshree - Aranya Heights')">
+                <img class="img-fluid w-100" src="img/rajshree.png" alt="">
+                <a class="btn btn-project" href="img/rajshree.png" data-toggle="modal" data-target="#projectModal" onclick="loadIframe(src='//storage.net-fs.com/hosting/8311954/1/', name='Rajshree - Aranya Heights')">
                     <!-- <i class="fa fa-2x fa-plus text-white"></i> -->
                     <p>RAJSHREE ARANYA</p>
                 </a>
@@ -252,7 +253,7 @@
     <div class="container-fluid py-5" id="testimonial">
         <div class="container py-5">
             <div class="section-title position-relative text-center" style="margin-bottom: 120px;">
-                <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Testimonial</h6>
+                <h5 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Testimonial</h5>
                 <h1 class="display-4">Our Clients Say</h1>
             </div>
             <div class="row justify-content-center">
@@ -281,7 +282,7 @@
     <div class="container-fluid py-5" id="contact">
         <div class="container py-5">
             <div class="section-title position-relative text-center">
-                <h6 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Contact</h6>
+                <h5 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Contact</h5>
                 <h1 class="font-secondary display-4">Get In Touch</h1>
             </div>
             <div class="row justify-content-center">
