update 10th may

--- a/index.html
+++ b/index.html
@@ -58,7 +58,6 @@
                 <video class="position-absolute w-100 h-100" autoplay loop muted>
                     <source src="video/signia_2bhk.mp4" type="video/mp4">
                 </video>
-                <!-- <iframe id="projectFrame" class="position-absolute" src="" name="" width="100%" height="100%" frameborder="0" allow="fullscreen; accelerometer; gyroscope; magnetometer; vr; xr; xr-spatial-tracking; autoplay; camera; microphone" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true" oallowfullscreen="true" msallowfullscreen="true"></iframe> -->
                 <div class="carousel-item position-relative active" style="height: 100vh; min-height: 400px;">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-2" style="max-width: 900px;">
@@ -107,7 +106,7 @@
                     <h3 class="text-uppercase text-primary mb-3">Why work with us?</h3>
                     <ul>
                         <li>
-                            <span class="text-bullet">High-Resolution 360° Virtual Tours: </span>Capture every detail with state-of-the-art equipment and expert photography
+                            <span class="text-bullet">High-Resolution 360°° Virtual Tours: </span>Capture every detail with state-of-the-art equipment and expert photography
                         </li>
                         <li>
                             <span class="text-bullet">Interactive Elements: </span>Enrich your Tour with Interactive Hotspots, Multimedia elements
@@ -140,10 +139,10 @@
             <div class="row">
                 <div class="col-lg-3 mb-3">
                     <div class="product-item mb-2">
-                        <div class="product-img">
-                            <img class="img-fluid" src="img/vr.png" alt="">
-                            <a type="button" class="btn btn-primary" href="/virtual-tour">
-                                <i class="fa fa-2x fa-plus text-white"></i>
+                        <div class="project-item">
+                            <img class="img-fluid" src="../img/vr.png" alt="">
+                            <a class="btn btn-project-features" href="/virtual-tour">
+                                <p>Navigate seamlessly in an interactive, 360°-degree virtual experience to get a fully immersive sense of the space<br><br><span class="info-span">Click to Know More</span></p>
                             </a>
                         </div>
                         <div class="bg-secondary text-center p-4">
@@ -153,23 +152,23 @@
                 </div>
                 <div class="col-lg-3 mb-3">
                     <div class="product-item mb-2">
-                        <div class="product-img">
+                        <div class="project-item">
                             <img class="img-fluid" src="img/aerial.jpg" alt="">
-                            <a type="button" class="btn btn-primary" href="/aerial-tour">
-                                <i class="fa fa-2x fa-plus text-white"></i>
+                            <a class="btn btn-project-features" href="/aerial-tour">
+                                <p>Soar over landmarks, cityscapes, and natural landscapes for an immersive, bird's-eye perspectivespace<br><br><span class="info-span">Click to Know More</span></p>
                             </a>
                         </div>
                         <div class="bg-secondary text-center p-4">
-                            <h3 class="m-0">Aerial 360 Tour</h3>
+                            <h3 class="m-0">Aerial 360° Tour</h3>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 mb-3">
                     <div class="product-item mb-2">
-                        <div class="product-img">
+                        <div class="project-item">
                             <img class="img-fluid" src="img/webar.jpg" alt="">
-                            <a type="button" class="btn btn-primary" href="/webar-brochure">
-                                <i class="fa fa-2x fa-plus text-white"></i>
+                            <a class="btn btn-project-features"href="/webar-brochure">
+                                <p>Bring your brochure to life with immersive our ML based Augmented Reality Solutionspace<br><br><span class="info-span">Click to Know More</span></p>
                             </a>
                         </div>
                         <div class="bg-secondary text-center p-4">
@@ -179,10 +178,10 @@
                 </div>
                 <div class="col-lg-3 mb-3">
                     <div class="product-item mb-2">
-                        <div class="product-img">
+                        <div class="project-item">
                             <img class="img-fluid" src="img/3d_services.jpg" alt="">
-                            <a type="button" class="btn btn-primary" href="/3d-cad-services">
-                                <i class="fa fa-2x fa-plus text-white"></i>
+                            <a class="btn btn-project-features" href="/3d-cad-services">
+                                <p>From 3D modeling, Location A/V and rendering to virtual tours, we bring your ideas to life in stunning detailspace<br><br><span class="info-span">Click to Know More</span></p>
                             </a>
                         </div>
                         <div class="bg-secondary text-center p-4">
@@ -205,46 +204,54 @@
         <div class="owl-carousel gallery-carousel">
             <div class="project-item">
                 <img class="img-fluid w-100" src="img/ambit.png" alt="">
-                <a class="btn btn-project" href="img/ambit.png' data-toggle="modal" data-target="#projectModal" onclick="loadIframe(src='//storage.net-fs.com/hosting/8311954/0/', name='Ambit - Primoris')">
+                <a class="btn btn-project" href="img/ambit.png" data-toggle="modal" data-target="#projectModal" onclick="loadIframe(src='//storage.net-fs.com/hosting/8311954/0/', name='Ambit - Primoris')">
                     <!-- <i class="fa fa-2x fa-plus text-white"></i> -->
-                    <p>AMBIT PRIMORIS</p>
+                    <p>AMBIT PRIMORIS<br><span class="info-span">Interactive Virtual Tour</span></p>
                 </a>
             </div>
             <div class="project-item">
                 <img class="img-fluid w-100" src="img/rajshree.png" alt="">
                 <a class="btn btn-project" href="img/rajshree.png" data-toggle="modal" data-target="#projectModal" onclick="loadIframe(src='//storage.net-fs.com/hosting/8311954/1/', name='Rajshree - Aranya Heights')">
                     <!-- <i class="fa fa-2x fa-plus text-white"></i> -->
-                    <p>RAJSHREE ARANYA</p>
+                    <p>RAJSHREE ARANYA<br><span class="info-span">Aerial 360° Tour</span></p>
                 </a>
             </div>
             <div class="project-item">
-                <img class="img-fluid w-100" src="img/gallery-4.jpg" alt="">
-                <a class="btn btn-project" href="img/gallery-4.jpg" data-toggle="modal" data-target="#projectModal" onclick="loadIframe(src='', name='Signia')">
+                <img class="img-fluid w-100" src="img/lotus.png" alt="">
+                <a class="btn btn-project" href="img/lotus.png" data-toggle="modal" data-target="#projectModal" onclick="loadIframe(src='//lotus-drone-view.netlify.app/', name='Lotus Developers')">
                     <!-- <i class="fa fa-2x fa-plus text-white"></i> -->
-                    <p>SIGNIA</p>
+                    <p>LOTUS DEVELOPERS<br><span class="info-span">Aerial 360° Tour</span></p>
                 </a>
             </div>
             <div class="project-item">
-                <img class="img-fluid w-100" src="img/gallery-5.jpg" alt="">
-                <a class="btn btn-project" href="img/gallery-5.jpg" data-toggle="modal" data-target="#projectModal" onclick="loadIframe(src='', name='Project 4')">
+                <img class="img-fluid w-100" src="img/pebble.png" alt="">
+                <a class="btn btn-project" href="img/pebble.png" data-toggle="modal" data-target="#projectModal" onclick="loadIframe(src='//storage.net-fs.com/hosting/8277896/1/', name='Pebble House')">
                     <!-- <i class="fa fa-2x fa-plus text-white"></i> -->
-                    <p>PROJECT 4</p>
+                    <p>THE PEBBLE HOUSE<br><span class="info-span">Virtual Tour</span></p>
                 </a>
             </div>
             <div class="project-item">
-                <img class="img-fluid w-100" src="img/gallery-6.jpg" alt="">
-                <a class="btn btn-project" href="img/gallery-6.jpg" data-toggle="modal" data-target="#projectModal" onclick="loadIframe(src='', name='Project 5')">
+                <img class="img-fluid w-100" src="img/anmol.png" alt="">
+                <a class="btn btn-project" href="img/anmol.png" data-toggle="modal" data-target="#projectModal" onclick="loadIframe(src='//storage.net-fs.com/hosting/8277896/3/', name='Anmol Residency')">
                     <!-- <i class="fa fa-2x fa-plus text-white"></i> -->
-                    <p>PROJECT 5</p>
+                    <p>ANMOL RESIDENCY<br><span class="info-span">Interactive Virtual Tour</span></p>
                 </a>
             </div>
             <div class="project-item">
-                <img class="img-fluid w-100" src="img/gallery-6.jpg" alt="">
-                <a class="btn btn-project" href="img/gallery-6.jpg" data-toggle="modal" data-target="#projectModal" onclick="loadIframe(src='', name='Project 6')">
+                <img class="img-fluid w-100" src="img/nyshaa.png" alt="">
+                <a class="btn btn-project" href="img/nyshaa.png" data-toggle="modal" data-target="#projectModal" onclick="loadIframe(src='//nyshaa-space-builder.netlify.app/', name='Nyshaa Space')">
                     <!-- <i class="fa fa-2x fa-plus text-white"></i> -->
-                    <p>PROJECT 6</p>
+                    <p>NYSHAA SPACE<br><span class="info-span">Aerial 360° Tour</span></p>
                 </a>
             </div>
+            <div class="project-item">
+                <img class="img-fluid w-100" src="img/nexome.png" alt="">
+                <a class="btn btn-project" href="img/nexome.png" data-toggle="modal" data-target="#projectModal" onclick="loadIframe(src='//storage.net-fs.com/hosting/8277896/2/', name='Nexome - Altava')">
+                    <!-- <i class="fa fa-2x fa-plus text-white"></i> -->
+                    <p>NEXOME ALTAVA<br><span class="info-span">Virtual Tour</span></p>
+                </a>
+            </div>
+            
         </div>
     </div>
     <!-- Gallery End -->
