--- a/virtual-tour/index.html
+++ b/virtual-tour/index.html
@@ -53,9 +53,10 @@
         <div id="header-carousel" class="carousel slide carousel-fade" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item position-relative active" style="height: 100vh; min-height: 400px;">
-                    <video class="position-absolute w-100 h-100" autoplay loop muted>
+                    <!-- <video class="position-absolute w-100 h-100" autoplay loop muted>
                         <source src="../video/signia_2bhk.mp4" type="video/mp4">
-                    </video>
+                    </video> -->
+                    <iframe class="position-absolute" src="//storage.net-fs.com/hosting/8311954/3/" name="Drone Sample" width="100%" height="100%" frameborder="0" allow="fullscreen; accelerometer; gyroscope; magnetometer; vr; xr; xr-spatial-tracking; autoplay; camera; microphone" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true" oallowfullscreen="true" msallowfullscreen="true"></iframe>
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 1200px;">
                             <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">Interactive Virtual Tour</h4>
@@ -98,7 +99,7 @@
                 </div>
                 <div class="col-lg-7">
                     <video class="content-video w-100 h-100" autoplay loop muted>
-                        <source src="../video/signia_2.mp4" type="video/mp4">
+                        <source src="../video/easy-share.mp4" type="video/mp4">
                     </video>
                 </div>
             </div>
