--- a/webar-brochure/index.html
+++ b/webar-brochure/index.html
@@ -54,7 +54,7 @@
             <div class="carousel-inner">
                 <div class="carousel-item position-relative active" style="height: 100vh; min-height: 400px;">
                     <video class="position-absolute w-100 h-100" autoplay loop muted>
-                        <source src="../video/signia_2bhk.mp4" type="video/mp4">
+                        <source src="../video/Webar-Wide.mp4" type="video/mp4">
                     </video>
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 1200px;">
@@ -76,7 +76,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-7">
                     <video class="content-video w-100 h-100" autoplay loop muted>
-                        <source src="../video/signia_2.mp4" type="video/mp4">
+                        <source src="../video/webar-square-demo.mp4" type="video/mp4">
                     </video>
                 </div>
                 <div class="col-lg-5">
@@ -98,7 +98,7 @@
                 </div>
                 <div class="col-lg-7">
                     <video class="content-video w-100 h-100" autoplay loop muted>
-                        <source src="../video/signia_2.mp4" type="video/mp4">
+                        <source src="../video/easy-share.mp4" type="video/mp4">
                     </video>
                 </div>
             </div>
